# reports_ece

./: .gitignore  .vimrc  ADIPOSER.code-workspace  CMakeLists.txt  DTMF_signal.m  Determinants.c  Git Adiposer.lnk  LICENSE  Makefile  Q2015-B.py  Q2017-A.cpp  README.md  StandardShading.fragmentshader  StandardShading.vertexshader  add_large_numbers.c  art_project.py  artistic_python.py  binary_search.py  chaining_search.py  clean_code.py  complete_search.py  convolute.m  count_files.py  decision_tree.py  ex6_1.m  game_of_life.py  gaussian_naive_bayes.py  hash_table.py  jam2016_q1.cpp  jam2016_q2.cpp  jam2016_q3.cpp  key_list.txt  load_csv.py  load_csv_all.py  load_images.py  load_images_all.py  main.py  method-presentation.ipynb  networks_1.tex  newton_raphson_root_find.cpp  (+17 more)
.pylint.d/: clean_code1.stats
.spyproject/config/: workspace.ini
Adipose/AdiposeTissueDetector/: GainOffset.cs  IRImageApplication.csproj  MainForm.cs  MeasurementAdiposeRectangle.cs  RangeSliderControl.Designer.cs  RangeSliderControl.cs  RangeSliderEventArgs.cs
AdiposeTissueDetector/: MainForm.Designer.cs  Overlay.cs  SeededRegionGrowing.cs  packages.config
Algorithms/: Floyd–Warshall.py  max_sub_array_dynamic_progr.c  max_sub_array_naive.c  max_sub_array_partial_sums.c
BusApp/: README.md
CGJ/: Q2016-A.cpp  Q2017-B.cpp
Communication Systems/: convolute.m  convolutions_example.m  lti_syst_response.m  passw_extr_dtmf.m
GCJ/: Q2015-B.py
GigeVisionSample/: DiscoveryDialog.Designer.cs  DiscoveryDialog.cs  GigeVisionSample.csproj  MainWindow.Designer.cs  MainWindow.cs  Program.cs  StaticIpDialog.Designer.cs  StaticIpDialog.cs
Google Code Jam/: Q2015-B.py  Q2016-B.cpp
Graphics/: safe_spot.cpp
IRImageReaderDemo/: IRImageReaderDemo.csproj  MainForm.Designer.cs  MainForm.cs
IRImageReaderDemoChanges/: Exif.cs  GainOffset.cs  IRImageApplication.csproj  IRImageReaderDemoChanges.csproj  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MeasurementAdiposeRectangle.cs  MeasurmentList.cs  Overlay.cs  Program.cs  RangeSliderControl.Designer.cs  RangeSliderControl.cs  RangeSliderEventArgs.cs  SeededRegionGrowing.cs  SoundPlayer.cs
Machine Learning/: decision_tree.py  gaussian_naive_bayes.py
Natural Language Processing/: levenstein.py  weather_forecast.py
Numerical Analysis/: add_large_numbers.c  eulers_diff_eq.c  newton_raphson_root_find.cpp  simpsons_integral.c  substract_large_numbers.c
Numerical-Analysis/: Euler.c  NR.cpp  Trapezoid.c  Trapezoid.cpp  lala.txt  simpson.cpp  substract.c
Parallel Programming/: guard_clauses.cpp  random_list_sorting.c
Python Projects/: artistic_python.py  data_and_behavior.py  input.txt  kin.py  network.py  protocol_classes.py  url_parsing.py  vision_oop_refactor.py  vision_refactoring.py  webcam_filter.py
Recreational Python Projects/: ChatServer.py
Search in Sparse Data/: binary_search.py  chaining_search.py  complete_search.py  hash_table.py  max_sub_array_dynamic_progr.c  max_sub_array_naive.c  max_sub_array_partial_sums.c  open_address_search.py  sparse_matrices_airports.py
Searching and Sparse Data/: binary_search.py  chaining_search.py  floyd_warshall.py  hash_table.py  max_sub_array_naive.c  open_address_search.py  sparse_matrices_airports.py
ThermalCamera/: CameraControl.Designer.cs  CameraControl.cs  DiscoveryDialog.Designer.cs  DiscoveryDialog.cs  ImageOverlay.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  PerformanceMonitor.cs  Program.cs  SelectStreamingFormatWindow.Designer.cs  SelectStreamingFormatWindow.cs  StaticIpDialog.Designer.cs  StaticIpDialog.cs  ThermalCamera.csproj
bus_app/: database.py  dataclasses.py  rich.py
code samples/: background_segment.py  plot_morphology.py  plot_segmentations.py  trainable_segmentation.py  vector_quantization.py
data/: bat_list_mouse_1.txt  wat_list_mouse_1.txt
docs/: _BAT+Thermal-Imaging.txt  camera_specs.md  core_methodos.md  core_methodos.txt  lexiko.txt  odigies_remote.md  odigies_remote.txt  plano_diplomatiki.md  plano_diplomatiki.txt  python_help.md  statistics.md
fifth/: StandardShading.fragmentshader  StandardShading.vertexshader
fourth/: Shader.fragmentshader
notebooks/: 01-data-exploration.ipynb  01-data_access.ipynb  01.ipynb  02-mask-extraction.ipynb  02-next_plotters.ipynb  03-feature-engineering.ipynb  04-intrascapular-temperatures.ipynb  05-intrascapular-kmeans.ipynb  06-fixed-kmeans.ipynb  07-exif-extraction.ipynb  08-multiple-views.ipynb  2darray.csv  some.xlsx
reports/: kefalaio5.docx  loukareas_update.pptx  loukareas_update1.pptx  supervised_presentation.pptx  Ο Λιπώδης Ιστός.docx  Περίληψη.docx  Ψηφιακές Κάμερες.docx
second/: lab.cpp
seventh/: MassSpringDamper.h  RigidBody.cpp
sixth/: lab.cpp
src/: data.py  detection.py  final22.py
test/: test_data.py
up1046970_E5/: CMakeLists.txt
up1046970_E5/exemplar/: main.cpp
(+1805 files in other folders)
